--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.1209.0",
+    "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "bitcoin-address-generator": "^1.0.2",
     "body-parser": "^1.20.0",
@@ -21,6 +22,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
@@ -29,6 +31,7 @@
     "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "node-fetch": "^3.2.10",
     "nodemon": "^2.0.16",
     "peer": "^0.6.1",
     "random-number": "0.0.9",
