--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "socket.io-client": "^4.5.0",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://192.168.42.176:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
