--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "node-fetch": "^3.2.10",
+    "node-mailjet": "^5.1.1",
     "nodemon": "^2.0.16",
     "peer": "^0.6.1",
     "random-number": "0.0.9",
