--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "socket.io-client": "^4.5.0",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "www.coincap.cloud",
+  "proxy":"http://www.coincap.cloud/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
