--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "presh Devops",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "aws-sdk": "^2.1209.0",
     "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
@@ -39,6 +40,7 @@
     "react-native-aws3": "0.0.9",
     "sinon": "^14.0.0",
     "socket.io": "^4.5.0",
+    "styled-components": "^5.3.6",
     "uuid": "^8.3.2",
     "validator": "^13.7.0"
   },
