--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "peer": "^0.6.1",
     "random-number": "0.0.9",
     "react-native-aws3": "0.0.9",
+    "request": "^2.88.2",
     "sinon": "^14.0.0",
     "socket.io": "^4.5.0",
     "styled-components": "^5.3.6",
